fixed bug where tag dialog would appear to the right off screen

--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -1,8 +1,21 @@
 @import "./global.css";
 /* create.css */
 
+.outer-create-container {
+  margin: 10px;
+  display: flex;
+  align-self: center;
+  justify-content: center;
+}
+
 .create-container {
   display: inline-block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 700px;
+  width: 100%;
 
 }
 
@@ -14,14 +27,13 @@
   }
 }
 
-
 .create-post-title {
-  width: 700px;
   text-align: left;
   margin-top: 30px;
-  margin-left: 35px;
   font-weight: bold;
+  width: 90%;
 }
+
 
 
 
@@ -73,8 +85,7 @@ textarea {
 
 .ck-editor__editable_inline {
   height: 400px;
-  width: 100%;
-  max-width: 662px;
+  max-width: 630px !important;
   border: #8f8f9d solid 1px !important;
   background-color: white;
 }
